--- a/src/app/greetings/greetings.component.html
+++ b/src/app/greetings/greetings.component.html
@@ -2,5 +2,6 @@
     <label for="name">Enter your name:</label>
     <input type="text" id="name" [(ngModel)]="name">
     <button (click)="greet()">Greet</button>
+    <button (click)="reload()">Reload</button>
     <p *ngIf="greeting">{{ greeting }}</p>
   </div>
